argocd/aws/203403084713/clusters/cbioportal-prod/apps/cbioportal-api/cbioportal-api-mirror.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cbioportal-api-mirror
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.cbioportal.org`)
      priority: 1000
      middlewares:
        - name: uablock-browser
          namespace: default
      services:
        - name: cbioportal-api-mirror
          kind: TraefikService
  tls:
    secretName: api-cbio-cert
