argocd/aws/203403084713/clusters/cbioportal-prod/apps/cbioportal-api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: "true"
    acme.cert-manager.io/http01-ingress-class: traefik
  name: cbioportal-api-ingress
  namespace: default
spec:
  rules:
    - host: api.cbioportal.org
      http:
        paths:
          - backend:
              service:
                name: cbioportal-backend-public-api-green
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - api.cbioportal.org
      secretName: api-cbio-cert
